# hpc_labs

./: .gitignore  README.md  package_lab.sh
lab01/: 80bpm0.csv  CMakeLists.txt  README.md  output.json  rapport.tex  visualize_ecg_mat.py
lab01/include/: csv_reader.h  ecg_processing.h  ecg_utils.h  json_writer.h  mat_reader.h  output_structs.h
lab01/scripts/: visualize_ecg.py
lab01/src/: csv_reader.c  ecg_processing.c  ecg_utils.c  json_writer.c  main.c
lab02/: CMakeLists.txt  main.c
lab02/include/: roofline_demo.h
lab02/script/: input.txt  roofline_gen.py
lab02/src/: roofline_demo.c
